libjna-java (3.2.4-2) UNRELEASED; urgency=low

  * switch debian/watch to new kenai URL
  * change SVN URL in debian/repack-source.sh

 -- Jan Dittberner <jandd@debian.org>  Sun, 13 Feb 2011 18:11:51 +0100

libjna-java (3.2.4-1) unstable; urgency=low

  [ Ludovic Claude ]
  * Team upload.
  * New upstream release
  * Added myself as uploader
  * Add Maven metadata
  * debian/control:
     - add dependency on maven-repo-helper

  [ Jan Dittberner ]
  * refresh patches

 -- Jan Dittberner <jandd@debian.org>  Wed, 21 Apr 2010 16:36:37 +0200

libjna-java (3.2.3-2) unstable; urgency=low

  * Team upload.
  * refresh patches
  * add debian/patches/04-load-native-code-from-fs.patch to try to load
    native library from /usr/lib/jni if system property
    jna.boot.library.path is not set (Closes: #576879)
  * debian/control:
    - set debhelper dependency to >= 7.0.50~
    - update Standards-Version to 3.8.4 (no changes needed)
    - add Vcs-Git and Vcs-Browser fields
  * switch to source format 3.0 (quilt)
    - add debian/source/format
    - remove quilt dependency from debian/control
    - remove patch rules from debian/rules
    - modify clean target to work with unpatched sources too
  * parse version from changelog in debian/rules
  * add myself to Uploaders
  * switch to dh7 rules in debian/rules

 -- Jan Dittberner <jandd@debian.org>  Thu, 08 Apr 2010 14:51:06 +0200

libjna-java (3.2.3-1) unstable; urgency=low

  * New upstream release.
  * Fixed debian/repack-source.sh to correctly use mktemp.
  * Make libjna-java Depends on *-headless packages.
  * Moved package under pkg-java control.
  * Added debian/README.source to describe quilt.
  * Added myself as Uploader.

 -- Michael Koch <konqueror@gmx.de>  Mon, 02 Nov 2009 14:14:51 +0100

libjna-java (3.1.0-5) unstable; urgency=low

  * Removing vcs fields.
  * Removing README.source.
  * Orphaning package.

 -- Daniel Baumann <daniel@debian.org>  Thu, 27 Aug 2009 08:47:56 +0200
